support hls audio and merging artists
